--- a/index.html
+++ b/index.html
@@ -140,10 +140,7 @@
 
 					<div class="video__item video__main">
 						<div class="videp__vid ibg">
-							<iframe width="560" height="315" src="https://www.youtube.com/embed/4-vZby69_ks?start=24"
-								title="YouTube video player" frameborder="0"
-								allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-								allowfullscreen></iframe>
+							<iframe width="560" height="315" src="https://www.youtube.com/embed/7gOH9TG30vc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 						</div>
 					</div>
 				</div>
